# pulse

./: .gitignore  README.md  dune-project  pulse.opam
bench/: bench_pulse.ml  dune
docs/: architecture.md
lib/: dune  graph.ml  graph.mli  node.ml  node.mli  observer.ml  observer.mli  pulse.ml  pulse.mli  scheduler.ml  scheduler.mli  var.ml  var.mli
test/: dune  test_pulse.ml
